Correct search bar spacing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -53,7 +53,7 @@ h2 {
 }
 
 .InputContainer {
-  margin-top: 6rem;
+  margin-top: 5rem;
 }
 
 .SearchInput {
